# rag_blueprint

./: .dockerignore  .gitignore  README.md  chainlit.md  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: branches_sync.yml  docs.yml
configurations/: configuration.default.json  configuration.local.json
docs/: create_docs.py  index.md
docs/how_to/: how_to_add_new_datasource.md  how_to_add_new_embedding_model.md  how_to_add_new_llm.md  how_to_add_new_vector_store.md  how_to_configure.md
docs/quickstart/: developer_setup.md  quickstart_setup.md
docs/src/: augment.md
docs/src/core/: base_configuration.md  base_factory.md  base_initializer.md  configuration_retrievers.md  logger.md
docs/src/jobs/: queries_retention.md
res/readme/: Knowledge-Base.fig
src/: augment.py  embed.py  evaluate.py
src/augmentation/: README.md
src/augmentation/bootstrap/: initializer.py
src/augmentation/chainlit/: exceptions.py  feedback_service.py  service.py  utils.py
src/augmentation/langfuse/: client.py  dataset_service.py  prompt_service.py
src/common/builders/: client_builders.py  vector_store_builders.py
src/core/: __init__.py  base_configuration.py  base_factory.py  base_initializer.py  configuration_retrievers.py  logger.py
src/embedding/: README.md
src/embedding/bootstrap/: initializer.py
src/embedding/embedders/: base_embedder.py  registry.py
src/embedding/embedding_models/: registry.py
src/embedding/orchestrators/: base_orchestrator.py  registry.py
src/embedding/splitters/: base_splitter.py  registry.py
src/embedding/validators/: builders.py  vector_store_validators.py
src/evaluation/: README.md
src/evaluation/evaluators/: ragas.py  (+1 more)
src/extraction/: README.md  __init__.py
src/jobs/: queries_retention.py
(+280 files in other folders)
